[gd_scene load_steps=14 format=2]

[ext_resource path="res://Projectiles/Grenade.gd" type="Script" id=1]
[ext_resource path="res://Assets/FX/explosion/explosion_2_02.png" type="Texture" id=2]
[ext_resource path="res://Assets/FX/explosion/explosion_2_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/FX/explosion/explosion_2_04.png" type="Texture" id=4]
[ext_resource path="res://Assets/FX/explosion/explosion_2_05.png" type="Texture" id=5]
[ext_resource path="res://Assets/FX/explosion/explosion_2_00.png" type="Texture" id=6]
[ext_resource path="res://Assets/FX/explosion/explosion_2_01.png" type="Texture" id=7]
[ext_resource path="res://Assets/FX/explosion/explosion_2_08.png" type="Texture" id=8]
[ext_resource path="res://Assets/FX/explosion/explosion_2_07.png" type="Texture" id=9]
[ext_resource path="res://Assets/FX/explosion/explosion_2_06.png" type="Texture" id=10]
[ext_resource path="res://Assets/Projectile/1.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "explode",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 34.7851

[node name="Grenade" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.500001, 0.999999 )
scale = Vector2( 2.65, 3 )

[connection signal="body_entered" from="." to="." method="OnBodyEntered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="AnimationFinished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
